--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.39.1",
+    "drizzle-orm": "^0.39.2",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
@@ -57,6 +57,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "nodemailer": "^6.10.0",
     "openai": "^4.83.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
