--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.2",
     "drizzle-zod": "^0.7.0",
